# transcribe-audio

./: .gitignore  LICENSE  README.md  app.py  app_improved.py  config.py  prompts.py  pyproject.toml  utils.py
scripts/: deploy.sh
tests/: test_utils.py
